--- a/index.html
+++ b/index.html
@@ -46,52 +46,52 @@
           <div class="product">
               <img src="side.png" alt="Product 1">
               <p>Product 1</p>
-              <button onclick="addToCart(1, 'Product 1')">Add to Cart</button>
+              <button onclick="addToCart(1, 'Product 1','side.png')">Add to Cart</button>
           </div>
           <div class="product">
               <img src="side.png" alt="Product 2">
               <p>Product 2</p>
-              <button onclick="addToCart(2, 'Product 2')">Add to Cart</button>
+              <button onclick="addToCart(2, 'Product 2','side.png')">Add to Cart</button>
           </div>
           <div class="product">
               <img src="side.png" alt="Product 3">
               <p>Product 3</p>
-              <button onclick="addToCart(3, 'Product 3')">Add to Cart</button>
+              <button onclick="addToCart(3, 'Product 3','side.png')">Add to Cart</button>
           </div>
           <div class="product">
             <img src="side.png" alt="Product 4">
             <p>Product 4</p>
-            <button onclick="addToCart(4, 'Product 4')">Add to Cart</button>
+            <button onclick="addToCart(4, 'Product 4','side.png')">Add to Cart</button>
         </div>
         <div class="product">
             <img src="side.png" alt="Product 5">
             <p>Product 5</p>
-            <button onclick="addToCart(5, 'Product 5')">Add to Cart</button>
+            <button onclick="addToCart(5, 'Product 5','side.png')">Add to Cart</button>
         </div>
         <div class="product">
             <img src="side.png" alt="Product 6">
             <p>Product 6</p>
-            <button onclick="addToCart(6, 'Product 6')">Add to Cart</button>
+            <button onclick="addToCart(6, 'Product 6','side.png')">Add to Cart</button>
         </div>
         <div class="product">
             <img src="side.png" alt="Product 7">
             <p>Product 7</p>
-            <button onclick="addToCart(7, 'Product 7')">Add to Cart</button>
+            <button onclick="addToCart(7, 'Product 7','side.png')">Add to Cart</button>
         </div>
         <div class="product">
             <img src="side.png" alt="Product 8">
             <p>Product 8</p>
-            <button onclick="addToCart(8, 'Product 8')">Add to Cart</button>
+            <button onclick="addToCart(8, 'Product 8','side.png')">Add to Cart</button>
         </div>
         <div class="product">
             <img src="side.png" alt="Product 9">
             <p>Product 9</p>
-            <button onclick="addToCart(9, 'Product 9')">Add to Cart</button>
+            <button onclick="addToCart(9, 'Product 9','side.png')">Add to Cart</button>
         </div>
         <div class="product">
             <img src="side.png" alt="Product 10">
             <p>Product 10</p>
-            <button onclick="addToCart(10, 'Product 10')">Add to Cart</button>
+            <button onclick="addToCart(10, 'Product 10','side.png')">Add to Cart</button>
         </div>
       </div>
   </div>
