--- a/index.html
+++ b/index.html
@@ -13,87 +13,97 @@
     <img class="img" src="Flipkart.png" alt="Flipkart Logo">
 
     <div class="detail">
-    <div class="search-container">
+      <div class="search-container">
         <input type="text" id="search-input" placeholder="Search for products, brands and more">
         <button id="search-button"><span>&#128269;</span></button>
-    </div>
+      </div>
 
-    <div class="cart-container">
+      <div class="cart-container">
         <button id="cart-button" onclick="toggleCartModal()"><span>&#128722;</span> Cart</button>
+      </div>
     </div>
-</div>
   </div>
 
   <div class="sidebar">
-      <button class="hamburger" onclick="toggleSidebar()">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-      </button>
-      <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Login</a></li>
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Sign Up</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Services</a></li>
-      </ul>
+    <button class="hamburger" onclick="toggleSidebar()">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Login</a></li>
+      <li><a href="#">Dashboard</a></li>
+      <li><a href="#">Sign Up</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">Services</a></li>
+    </ul>
   </div>
 
   <div class="content">
-      <div class="products">
-          <div class="product">
-              <img src="side.png" alt="Product 1">
-              <p>Product 1</p>
-              <button onclick="addToCart(1, 'Product 1','side.png')">Add to Cart</button>
-          </div>
-          <div class="product">
-              <img src="side.png" alt="Product 2">
-              <p>Product 2</p>
-              <button onclick="addToCart(2, 'Product 2','side.png')">Add to Cart</button>
-          </div>
-          <div class="product">
-              <img src="side.png" alt="Product 3">
-              <p>Product 3</p>
-              <button onclick="addToCart(3, 'Product 3','side.png')">Add to Cart</button>
-          </div>
-          <div class="product">
-            <img src="side.png" alt="Product 4">
-            <p>Product 4</p>
-            <button onclick="addToCart(4, 'Product 4','side.png')">Add to Cart</button>
-        </div>
-        <div class="product">
-            <img src="side.png" alt="Product 5">
-            <p>Product 5</p>
-            <button onclick="addToCart(5, 'Product 5','side.png')">Add to Cart</button>
-        </div>
-        <div class="product">
-            <img src="side.png" alt="Product 6">
-            <p>Product 6</p>
-            <button onclick="addToCart(6, 'Product 6','side.png')">Add to Cart</button>
-        </div>
-        <div class="product">
-            <img src="side.png" alt="Product 7">
-            <p>Product 7</p>
-            <button onclick="addToCart(7, 'Product 7','side.png')">Add to Cart</button>
-        </div>
-        <div class="product">
-            <img src="side.png" alt="Product 8">
-            <p>Product 8</p>
-            <button onclick="addToCart(8, 'Product 8','side.png')">Add to Cart</button>
-        </div>
-        <div class="product">
-            <img src="side.png" alt="Product 9">
-            <p>Product 9</p>
-            <button onclick="addToCart(9, 'Product 9','side.png')">Add to Cart</button>
-        </div>
-        <div class="product">
-            <img src="side.png" alt="Product 10">
-            <p>Product 10</p>
-            <button onclick="addToCart(10, 'Product 10','side.png')">Add to Cart</button>
-        </div>
+    <div class="products">
+      <div class="product">
+        <img src="side.png" alt="Product 1">
+        <p>Product 1</p>
+        <p>Price: $10.00</p>
+        <button onclick="addToCart(1, 'Product 1', 'side.png', 10.00)">Add to Cart</button>
       </div>
+      <div class="product">
+        <img src="side.png" alt="Product 2">
+        <p>Product 2</p>
+        <p>Price: $15.00</p>
+        <button onclick="addToCart(2, 'Product 2', 'side.png', 15.00)">Add to Cart</button>
+      </div>
+      <div class="product">
+        <img src="side.png" alt="Product 3">
+        <p>Product 3</p>
+        <p>Price: $20.00</p>
+        <button onclick="addToCart(3, 'Product 3', 'side.png', 20.00)">Add to Cart</button>
+      </div>
+      <div class="product">
+        <img src="side.png" alt="Product 4">
+        <p>Product 4</p>
+        <p>Price: $12.50</p>
+        <button onclick="addToCart(4, 'Product 4', 'side.png', 12.50)">Add to Cart</button>
+      </div>
+      <div class="product">
+        <img src="side.png" alt="Product 5">
+        <p>Product 5</p>
+        <p>Price: $8.00</p>
+        <button onclick="addToCart(5, 'Product 5', 'side.png', 8.00)">Add to Cart</button>
+      </div>
+      <div class="product">
+        <img src="side.png" alt="Product 6">
+        <p>Product 6</p>
+        <p>Price: $20.00</p>
+        <button onclick="addToCart(6, 'Product 6','side.png',20.00)">Add to Cart</button>
+    </div>
+    <div class="product">
+        <img src="side.png" alt="Product 7">
+        <p>Product 7</p>
+        <p>Price: $30.00</p>
+        <button onclick="addToCart(7, 'Product 7','side.png',30.00)">Add to Cart</button>
+    </div>
+    <div class="product">
+        <img src="side.png" alt="Product 8">
+        <p>Product 8</p>
+        <p>Price: $10.00</p>
+        <button onclick="addToCart(8, 'Product 8','side.png',10.00)">Add to Cart</button>
+    </div>
+    <div class="product">
+        <img src="side.png" alt="Product 9">
+        <p>Product 9</p>
+        <p>Price: $15.00</p>
+        <button onclick="addToCart(9, 'Product 9','side.png',15.00)">Add to Cart</button>
+    </div>
+    <div class="product">
+        <img src="side.png" alt="Product 10">
+        <p>Product 10</p>
+        <p>Price: $30.00</p>
+        <button onclick="addToCart(10, 'Product 10','side.png',30)">Add to Cart</button>
+    </div>
+    </div>
   </div>
 
   <div id="cart-modal" class="cart-modal">
@@ -101,9 +111,15 @@
       <span class="close" onclick="toggleCartModal()">&times;</span>
       <h2>Your Cart</h2>
       <div id="cart-items"></div>
+      <h3>Total Price: $<span id="total-price">0.00</span></h3>
+      <button id="checkout-all-button" onclick="checkoutAll()">Checkout All</button>
     </div>
   </div>
 
-<script src="search.js"></script>
+
+  <script src="search.js"></script>
+
 </body>
 </html>
+
+
